--- a/src/templates/Home.html
+++ b/src/templates/Home.html
@@ -3,15 +3,71 @@
 <head>
     <meta charset = "UTF-8">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <style>
+    html,body {
+        background: linear-gradient(90deg,rgba(17,82,201,1),rgba(35,180,209,1));
+    }
+    .bxsmall{
+        margin-top : 15px;
+        margin-left: 400px;
+        margin-right:200px;
+        width : 750px;
+    }
+    .logo{
+        font-family:"Georgia";
+        font-size : 30px;
+        color: #0C1504;
+    }
+    label{
+        padding: 3px;
+        margin-left:5px;
+        color: #0C1504;
+    }
+    .inputter{
+        margin-left:5px;
+        width : 300px;
+        border-radius: 5px;
+    }
+    .buttoner{
+        margin-left:5px;
+        background-color: rgba(140,214,65,0.7);
+        color: #263F0D;
+        border: none;
+        padding: 3px 8px;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 5px;
+        height: 30px;
+    }
+    .buttoner:hover{
+        background-color: rgba(111,224,126,0.8);
+    }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Reminder Bot!</h1>
-    <form action="/chat">
-        <div>
-            <label>Enter your name :</label>
-            <input id = "username"type="text" name ="username">
+    <div class="container-fluid">
+        <!--LOGO-->
+        <div class="row margin-top">
+            <div class="col-12 text-center">
+                <!-- Gambar -->
+                <img src="static/logo.png" alt="Logo" width="75" height ="75">
+            </div>
         </div>
-        <button type ="submit">Submit</button>
-    </form>
+        
+        <div class="row margin-top">
+            <!--TULISAN-->
+            <div class="col-12 text-center">
+                <b><h1 class="logo">Welcome to Reminder Bot!</h1></b>
+            </div>
+        </div>
+        <div class="bxsmall">
+        <form action="/chat">
+            <label class><b>Enter your name :</b></label>
+            <input class = "inputter" id = "username"type="text" name ="username">
+            <button class = "buttoner" type ="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
