--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -3,17 +3,94 @@
 <head>
     <meta charset = "UTF-8">
     <title>Butler-san</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <style>
+        html,body {
+            background: linear-gradient(60deg,rgba(17,82,201,1),rgba(35,180,209,1));
+        }
+        .logo{
+            font-family:"Georgia";
+            font-size:30px;
+            color: #0C1504;
+        }
+        .usertext{
+            margin-top: 2px;
+            margin-left:5px;
+            margin-right: 200px;
+            text-align: left;
+            color: #0C1504;
+        }
+        .bottext{
+            margin-top: 2px;
+            margin-left: 200px;
+            margin-right: 10px;
+            text-align: right;
+            color: #0C1504;
+        }
+        .box{
+            margin-top: 30px;
+            margin-left:325px;
+            margin-right:225px;
+            margin-bottom: 30px;
+            width: 700px;
+            padding: 20px;
+            background:linear-gradient(60deg,rgba(140,214,65,0.7),rgba(111,224,126,0.8));
+            border-radius: 25px;
+        }
+        .txtinputter{
+            width : 700px;
+            margin-left:20px;
+            margin-right:10px;
+            height: 40px;
+            border-radius: 5px;
+        }
+        .sndbutton{
+            margin-left:10px;
+            background-color: rgba(140,214,65,0.7);
+            border: none;
+            color: white;
+            padding: 7px 11px;
+            cursor: pointer;
+            height: 40px;
+            border-radius: 5px;
+        }
+        .sndbutton:hover{
+            background-color: rgba(111,224,126,0.8);
+        }
+        .input_box{
+            margin-top:10px;
+            margin-left:325px;
+            margin-right:225px;
+        }
+    </style>
 </head>
 <body>
-    <h1>
-        REMINDER BOT
-    </h1>
-    <div id = "message">
+    <div class="container-fluid">
+        <!--LOGO-->
+        <div class='row margin-top'>
+            <div class="col-12 text-center">
+                <!-- Gambar -->
+                <a href="/"><img src="static/logo.png" alt="Logo" width="75" height ="75"></a>
+            </div>
+        </div>
+        <div class="row margin-top">
+            <!--TULISAN-->
+            <div class="col-12 text-center">
+                <b><h1 class="logo">REMINDER BOT</h1></b>
+            </div>
+        </div>
+        <div class = "box">
+            <div id = "message">
+            </div>
+        </div>
     </div>
+    <div class="input_box">
     <form id = "input_message_form">
-        <input type="text" placeholder="Enter your message here" id="input_message"></input>
-        <button type="submit">Send</button>
+        <input class="txtinputter" type="text" placeholder="Enter your message here" id="input_message"></input>
+        <button class="sndbutton" type="submit"><i class="fas fa-paper-plane"></i></button>
     </form>
+    </div>
 </body>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 <script>
@@ -47,14 +124,14 @@ Yang bawah buat ngurusin chatnya*/
     socket.on('bot_arrive_message', function(data){
         alert(data['alert']);
         newMessage = document.createElement('div');
-        newMessage.innerHTML = "<b>Butler-san</b> : " + data['message'];
+        newMessage.innerHTML = "<div class='bottext'><b>Butler-san</b></div><div class='bottext'>" + data['message']+ "</div>";
         document.getElementById('message').appendChild(newMessage);
     })
 
     //ini buat ngepost user message ke chat wall
     socket.on('post_user_message', function(data){
         newMessage = document.createElement('div');
-        newMessage.innerHTML = "<b>"+data['username']+"</b> : " + data['user_message'];
+        newMessage.innerHTML = "<div class='usertext'><b>"+data['username']+"</b></div><div class='usertext'>" + data['user_message'] + "</div>";
         document.getElementById('message').appendChild(newMessage);
         socket.emit('get_bot_message', data)
     })
@@ -62,7 +139,7 @@ Yang bawah buat ngurusin chatnya*/
     //ini buat ngepost message dari bot setelah diolah dulu
     socket.on('post_bot_message', function(data){
         newMessage = document.createElement('div');
-        newMessage.innerHTML = "<b>Butler-san</b> : " + data['bot_message'];
+        newMessage.innerHTML =  "<div class='bottext'><b>Butler-san</b></div><div class='bottext'>" + data['bot_message'] + "</div>";
         document.getElementById('message').appendChild(newMessage);
         socket.emit('get_message_bot', data)
     })
