--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -62,6 +62,7 @@
             margin-top:10px;
             margin-left:325px;
             margin-right:225px;
+            margin-bottom:50px;
         }
     </style>
 </head>
